syntax = "proto3";

import "aelf/options.proto";
import "aelf/core.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";


option csharp_namespace = "AElf.Contracts.EvidenceContract";

service EvidenceContract {
    option (aelf.csharp_state) = "AElf.Contracts.EvidenceContract.EvidenceContractState";

    // Actions
    rpc FilesToHash (FileReceived) returns (aelf.Hash) { }
    rpc FilesToHashPlanB (FileReceivedPlanB) returns (aelf.Hash){ }
    // Views
    rpc VerifyFiles (google.protobuf.StringValue) returns (google.protobuf.BytesValue) {
        option (aelf.is_view) = true;
    }

    rpc VerifyFilesPlanB (VerifyPlanB) returns (google.protobuf.StringValue) {
        option (aelf.is_view) = true;
    }
}

message FileReceived{
    aelf.Hash id = 1;
    string fileName = 2;
    bytes fileByte = 3;//对应c++中的string,java中的ByteString
    sint32 fileSize = 4;
}

message FileReceivedPlanB{
    aelf.Hash id = 1;
    string fileName = 2;
    sint32 fileSize = 3;
}

message VerifyPlanB {
    string hashInput = 1;
    aelf.Hash hashFromFile = 2;
}